test/integration/tests/integer_plus_string.output
Error on line 10: string cannot be converted to float
