test/integration/tests/integer_plus_string.bas
10 PRINT 1 + "A"
